Update pom.xml
adição de configuração parar gerar build